--- a/index.html
+++ b/index.html
@@ -158,5 +158,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <form name="contact" netlify netlify-honeypot="bot-field" style="display:none;">
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
   </body>
 </html>
